@@ -3,8 +3,8 @@
 <xs:annotation>
 	<xs:documentation xml:lang="en">
 		Phoronix Test Suite / OpenBenchmarking.org XML Result File Specification
-		Copyright (C) 2008 - 2017, Phoronix Media
-		Copyright (C) 2008 - 2017, Michael Larabel
+		Copyright (C) 2008 - 2020, Phoronix Media
+		Copyright (C) 2008 - 2020, Michael Larabel
 	</xs:documentation>
 </xs:annotation>
 <xs:include schemaLocation="types.xsd" />
@@ -24,6 +24,7 @@
 			<xs:element name="RunMode" type="xs:string" minOccurs="0" maxOccurs="1" />
 			<xs:element name="RequiresCoreVersionMin" type="CoreVersion" minOccurs="0" maxOccurs="1" />
 			<xs:element name="RequiresCoreVersionMax" type="CoreVersion" minOccurs="0" maxOccurs="1" />
+			<xs:element name="Status" type="xs:string" minOccurs="0" maxOccurs="1" />
 		</xs:sequence>
 		</xs:complexType>
 		</xs:element>
